# jvk

./: .gitignore  ARCHITECTURE.md  CMakeLists.txt  LICENSE  fix_moduleinfo.cmake  jvk.cpp  jvk.h
.claude/projects/-Users-gavin-code-Discreet-Signals-jvk/memory/: feedback_no_builds.md
examples/: CMakeLists.txt
examples/benchmark/: CMakeLists.txt
examples/benchmark/Source/: PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
examples/compressor/: CMakeLists.txt
examples/compressor/Source/: PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
examples/shader_background/: CMakeLists.txt
examples/shader_background/Source/: PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h  background.frag  background.frag.spv
examples/triangles/: CMakeLists.txt
examples/triangles/Source/: PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h  Triangle.h
examples/waveform/: CMakeLists.txt
examples/waveform/Source/: PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h  Waveform.h
include/jvk/components/: SceneComponent.h  ShaderComponent.h  VulkanComponent.cpp  VulkanComponent.h
include/jvk/core/: Buffer.h  Cache.h  CommandScheduler.cpp  CommandScheduler.h  CommandScheduler.md  DebugLabel.h  DeletionQueue.h  DescriptorHelper.h  Device.cpp  Device.h  FrameRetained.h  GPUMemoryPool.h  GeometryPrimitive.md  Image.h  Memory.h  Pipeline.cpp  Pipeline.h  PipelineConfig.h  RenderTarget.cpp  RenderTarget.h  Renderer.cpp  Renderer.h  Resource.h  StagingBelt.h  VertexRingBuffer.h  VulkanInstance.cpp  VulkanInstance.h
include/jvk/core/macos/: NSViewGenerator.mm
include/jvk/core/windows/: HWNDGenerator.h
include/jvk/core/wrapper/: Pipeline.cpp  SwapChain.cpp  SwapChain.h  Wrapper.h
include/jvk/ecs/: Scene.h
include/jvk/ecs/components/: Mesh.h  MeshRenderer.h  Transform.h
include/jvk/graphics/: AudioProcessorEditor.h  Clipping.h  DrawGlyphs.h  DrawImage.h  DrawLine.h  DrawShader.h  EdgeTableCallbacks.h  Effects.h  FillPath.h  FillRect.h  FillShapes.h  Flush.h  GlyphAtlas.h  Graphics.h  Helpers.h  MSDF.h  NoiseShader.h  Shader.cpp  Shader.h  ShaderRegionVert.h  Types.h  UI2DShaders.h  VulkanGraphicsContext.h
include/jvk/graphics/pipelines/: Params.h
include/jvk/graphics/pipelines/blend/: BlendPipeline.h  NoisePipeline.h
include/jvk/graphics/pipelines/clip/: ClipPipeline.h
include/jvk/graphics/pipelines/color/: ColorDraw.h  ColorPipeline.h
include/jvk/graphics/pipelines/effect/: BlurPipeline.h  EffectPipeline.h  HSVPipeline.h  PathBlurPipeline.h  ShapeBlurPipeline.h
include/jvk/graphics/pipelines/fill/: FillPipeline.h
include/jvk/graphics/pipelines/path/: PathPipeline.h
include/jvk/graphics/pipelines/resolve/: ResolvePipeline.h
include/jvk/graphics/pipelines/shader/: ShaderPipeline.h
include/jvk/graphics/pipelines/stencil/: StencilPipeline.h
include/jvk/offscreen/: FullscreenShaders.h  ShaderImage.cpp  ShaderImage.h
include/jvk/ui/: AudioProcessorEditor.h  Component.h  GlyphAtlas.h  UI2DShaders.h  VulkanGraphicsContext.h  VulkanWindowRenderer.h
jvk/: CMakeLists.txt  jvk.cpp  jvk.h  jvk.mm
jvk/include/jvk/: FIFO.h
jvk/include/jvk/components/: Components.h  SceneComponent.h  ShaderComponent.h  VulkanComponent.cpp  VulkanComponent.h
jvk/include/jvk/core/: Buffer.h  DefaultShaders.h  DescriptorHelper.h  Image.h  PipelineConfig.h  VulkanInstance.cpp  VulkanInstance.h
jvk/include/jvk/core/macos/: NSViewGenerator.h  NSViewGenerator.mm  VulkanNSViewComponent.cpp  VulkanNSViewComponent.h
jvk/include/jvk/core/windows/: HWNDGenerator.h  VulkanHWNDComponent.cpp  VulkanHWNDComponent.h
jvk/include/jvk/core/wrapper/: Pipeline.cpp  Pipeline.h  Shader.h  SwapChain.cpp  SwapChain.h  Wrapper.h
jvk/include/jvk/ecs/: ComponentPool.h  ECS.h  ForwardRenderer.h  Renderer.h  Scene.h
jvk/include/jvk/ecs/components/: Animator.h  Material.h  Mesh.h  MeshRenderer.h  Smoother.h  Texture.h  Transform.h
jvk/include/jvk/ecs/entities/: Camera.h  Entity.h  Object.h  ObjectImpl.h
jvk/include/jvk/offscreen/: FullscreenShaders.h  ShaderImage.cpp  ShaderImage.h
jvk/include/jvk/ui/: AudioProcessorEditor.cpp  AudioProcessorEditor.h  Component.h  ComponentRenderer.h  Graphics.h  UI2DShaders.h  VulkanGraphicsContext.h  VulkanWindowRenderer.h
shaders/: blur.frag  blur.frag.spv  blur.vert  clip.frag  clip.frag.spv  clip.vert  clip.vert.spv  compile.sh  copy.frag  copy.frag.spv  fill.frag  fill.frag.spv  geom_blur.frag  geom_blur.frag.spv  geometry.glsl  geometry.vert  geometry.vert.spv  hsv.frag  hsv.frag.spv  noise.frag  noise.frag.spv  path_blur.frag  path_blur.frag.spv  path_sdf.frag  path_sdf.frag.spv  path_sdf.vert  path_sdf.vert.spv  shader_region.vert  shader_region.vert.spv  shape_blur.frag  shape_blur.frag.spv  stencil.frag  stencil.vert  stencil.vert.spv  ui2d.frag  ui2d.frag.spv  ui2d.vert  ui2d.vert.spv
